Fix alignment of settings descriptions.

--- a/app/style/Settings.less
+++ b/app/style/Settings.less
@@ -99,6 +99,7 @@
 
 .settings-row {
   display: flex;
+  margin-bottom: 18px;
   justify-content: flex-end;
 }
 
@@ -109,7 +110,6 @@
 .settings-checklist-description {
   font-style: italic;
   text-align: right;
-  margin: -16px 28px 10px 0px;
   color: var(--disabled-color);
   font-size: 11px;
   line-height: 15px;
@@ -120,7 +120,6 @@
   .inline-block-mixin;
 
   text-align: right;
-  margin: -1px 10px 20px 0;
   width: 125px;
 }
 
